# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: page_analyzer.yml
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: app.html  cururl.html  urls.html
