[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["kuznetsovyar22 <kuznetsovyar@mail.ru>"]
readme = "README.md"
packages = [{include = "python_project_83"}]

[tool.poetry.dependencies]
python = "^3.8.2"
flask = "^2.2.3"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
